--- a/src/components/layout/VerticalTabs.css
+++ b/src/components/layout/VerticalTabs.css
@@ -92,6 +92,8 @@
     text-shadow: rgba(0, 0, 0, 0.15) 0 1px;
     transition: all 200ms ease;
     border-radius: 10px 10px 0 0;
+    user-select: none;
+    -webkit-user-select: none;
 }
 
 /* Skewed edges for the folder-tab effect */
